[gd_scene load_steps=4 format=3 uid="uid://yvaeghs5pc8f"]

[ext_resource type="Script" path="res://scripts/card_info_container.gd" id="1_ql7vd"]
[ext_resource type="Texture2D" uid="uid://cc57ub34dl8hl" path="res://resources/card_shadow.png" id="2_5frdd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v6f7b"]

[node name="CardInfoContainer" type="Node2D"]
position = Vector2(772, 159)
script = ExtResource("1_ql7vd")

[node name="CardInfo" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = SubResource("CompressedTexture2D_v6f7b")

[node name="CardInfoLabel" type="Label" parent="."]
offset_left = -103.0
offset_top = 156.0
offset_right = 155.0
offset_bottom = 283.0
scale = Vector2(0.8, 0.8)
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
autowrap_mode = 2
text_overrun_behavior = 4

[node name="UnpoweredMask" type="Node2D" parent="."]

[node name="CardShadow" type="Sprite2D" parent="UnpoweredMask"]
modulate = Color(1, 1, 1, 0.47451)
z_index = 1
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_5frdd")

[node name="UnpoweredLabel" type="Label" parent="UnpoweredMask"]
z_index = 2
offset_left = -49.0
offset_top = -41.0
offset_right = 53.0
offset_bottom = -18.0
text = "UNPOWERED"
